# Library_DRF

./: .env.sample  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
config/: settings.py  urls.py
users/: models.py  serializers.py  tasks.py  urls.py  views.py
users/migrations/: 0001_initial.py
